--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
   color: #eee;
   display: grid;
   grid-template: 15vh 42vh 12vh 30vh / repeat(4, 25vw);
-  grid-template-areas: ". up . side" "dex . . side" "dex . . side" ". . . side";
+  grid-template-areas: ". up . side" "dex sec sum side" "dex sec sum side" ". . . side";
   overflow: hidden;
 }
 
@@ -14,6 +14,7 @@ body {
   display: grid;
   grid-template: 100% / 20% 60% 20%;
   font-size: 14px;
+  text-align: center;
 }
 
 .header #left-pic {
@@ -26,38 +27,52 @@ body {
   width: 100%;
 }
 
-section {
+main {
   grid-area: dex;
   background-color: grey;
   border-top-right-radius: 5%;
   border-bottom-right-radius: 5%;
-  padding-right: 5%
+  padding-right: 12%
 }
 
-section h1 {
+main h1 {
   margin-top: 0;
 }
-section #team-container{
+main #team-container{
   display: grid;
   grid-template: auto / 100% ;
-  grid-row-gap: 4%;
+  grid-row-gap: 8%;
   justify-items: center;
 }
 
-section h3 {
+main span:hover {
+  transform: scale(1.1);
+
+}
+
+main h3 {
   float: left;
   margin: 0;
   padding-top: 4%;
-  padding-left: 4%;
+  padding-left: 14%;
   font-size: 35px;
 }
 
-section img {
-  width: 20%;
+main img {
+  width: 18%;
   height: auto;
   float: right;
 }
 
+section {
+  grid-area: sec;
+  overflow-y: scroll;
+}
+
+summary { 
+  grid-area: sum;
+  overflow-y: scroll;
+}
 
 aside {
   grid-area: side;
