--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
   color: #eee;
   display: grid;
   grid-template: 15vh 14vh 14vh 14vh 14vh 29vh/repeat(4, 25vw);
-  grid-template-areas: ". up . side" "dex . . side" "dex . . side" "dex sec . side" "dex sec sum side" "dex sec sum side";
+  grid-template-areas: ". up . side" "dex . . side" "dex . . side" "dex sec . side" "dex sec sum side" "dex sec sum .";
   overflow: hidden;
 }
 
@@ -101,8 +101,8 @@ section #move-list p:hover {
 }
 
 summary {
-  z-index: 0;
   display: none;
+  z-index: 0;
   margin-top: 58%;
   margin-bottom: 15%;
   animation: 0.5s ease-in pullOut;
