--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Shadows Into Light', cursive;
   margin: 0;
   background-image: radial-gradient(#242323, #404040);
   background-size: cover;
@@ -27,47 +28,45 @@ body {
 }
 
 main {
+  display: grid;
+  grid-template: 10% 90% / 85% 15%;
+  grid-template-areas: ". btn" "player team";
   z-index: 2;
   grid-area: dex;
   background-color: grey;
   border-top-right-radius: 5%;
   border-bottom-right-radius: 5%;
-  padding-right: 12%;
+  padding-right: 1.9277%;
+  padding-top: 1.9277%;
 
-  button {
-    float: right;
+
+  #team-btn{
+    width: 80%;
+    grid-area: btn;
   }
-
-  h1 {
-    float: left;
-    margin-top: 0;
+  .team-member {
+    grid-area: player;
+    overflow-y:hidden;
   }
-
-  #team-container {
-    display: grid;
-    margin-top: 20%;
-    overflow-y: scroll;
-    grid-template: repeat(auto, 20%) / 100%;
-    grid-row-gap: 1%;
-    justify-items: center;
-  }
-
-  span:hover {
-    transform: scale(1.1);
-  }
-
-  h3 {
-    float: left;
-    margin: 0;
-    padding-top: 4%;
-    padding-left: 14%;
-    font-size: 35px;
-  }
-
-  img {
-    width: 18%;
+  #trainer-pic{
+    width: 75%;
     height: auto;
-    float: right;
+    padding-top:10%;
+    padding-left: 8%;
+  }
+  #trainer-name{
+    margin: 0;
+    font-size: 2em;
+    text-align: center;
+  }
+
+  #poke-btn {
+    padding-top: 385%;
+    font-size: 1.5em;
+    grid-area: team;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    margin: 0;
   }
 }
 
@@ -78,7 +77,7 @@ main {
 
   100% {
     transform: translate(0);
-    display: block;
+
   }
 }
 
@@ -94,24 +93,34 @@ section {
   grid-area: sec;
   border-top-right-radius: 5%;
   border-bottom-right-radius: 5%;
-
-  img {
-    width: 50%;
-    height: auto;
+  grid-template: 10% 30% 30% 30% /50% 50%;
+  grid-template-areas: "adpk remopk" ". ." ". ." ". .";
+  #add-pkmn {
+    grid-area: adpk;
+    width: 30%;
   }
-
-  #move-list {
-    cursor: pointer;
-    padding-left: 5%;
-    padding-top: 12%;
-    display: grid;
-    grid-template: repeat(2, 50%) / repeat(2, 50%);
-
-    p:hover {
-      transform: scale(1.2);
+  #remove-pkmn {
+    grid-area: remopk;
+    width:30%;
+  }
+  .poke-card{
+    display:grid;
+    grid-template: 30% 20% /50% 50%;
+    grid-template-areas: "pho nam" 'pho hel';
+    img {
+      grid-area: pho;
+      width: 100%;
+    }
+    h3{
+      grid-area: nam;
+      margin: 0;
+    }
+    p{
+      grid-area: hel;
     }
   }
-}
+  }
+
 
 summary {
   display: none;
